--- a/app/zakazstage1.html
+++ b/app/zakazstage1.html
@@ -5,7 +5,7 @@
 	<title>Заказ. Шаг 1.</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-	<script src="js/categorymenu.js"></script>
+	<script type="module" src="js/main.js"></script>
 </head>
 <body>
 	<!-- Header -->
@@ -55,39 +55,39 @@
 		<div class="l-maincontent__c-sendform">
 			<div class="l-maincontent__c-pole">
 				<article class="o-articleofinput">First Name*</article>
-				<input class="o-input" value="Jhone">
+				<input class="o-input" placeholder="Jhone">
 			</div>
 			<div class="l-maincontent__c-pole">
 				<article class="o-articleofinput">Last Name*</article>
-				<input class="o-input" value="Smith">
+				<input class="o-input" placeholder="Smith">
 			</div>
 			<div class="l-maincontent__c-pole">
 				<article class="o-articleofinput">Company Name</article>
-				<input class="o-input" value="Rosuson Industries">
+				<input class="o-input" placeholder="Rosuson Industries">
 			</div>
 			<div class="l-maincontent__c-pole">
 				<article class="o-articleofinput">Country*</article>
-				<input class="o-input" value="United Kingdom">
+				<input class="o-input" placeholder="United Kingdom">
 			</div>
 			<div class="l-maincontent__c-pole">
 				<article class="o-articleofinput">Town / City*</article>
-				<input class="o-input" value="e.g. New York">
+				<input class="o-input" placeholder="e.g. New York">
 			</div>
 			<div class="l-maincontent__c-pole">
 				<article class="o-articleofinput">Postcode*</article>
-				<input class="o-input" value="e.g. 358745">
+				<input class="o-input" placeholder="e.g. 358745">
 			</div>
 			<div class="l-maincontent__c-pole">
 				<article class="o-articleofinput">Address*<span class="o-article-required">Required*</span></article>
-				<input class="o-input-long" value="eg. 2nd steer, Costrica, Uk 354548"></input>
+				<input class="o-input-long" placeholder="eg. 2nd steer, Costrica, Uk 354548"></input>
 			</div>
 			<div class="l-maincontent__c-pole">
 				<article class="o-articleofinput">Email Address*</article>
-				<input class="o-input" value="abc@xyz.com">
+				<input class="o-input" placeholder="abc@xyz.com">
 			</div>
 			<div class="l-maincontent__c-pole">
 				<article class="o-articleofinput">Phone</article>
-				<input class="o-input" value="eg. 94 788 1221">
+				<input class="o-input" placeholder="eg. 94 788 1221">
 			</div>
 			<div class="l-maincontent__c-pole">
 				<div class="l-maincontent__checkbox">
