--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 	<title>Домашняя</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-	<script src="js/script.js"></script>
+	<script type="module" src="js/main.js"></script>
 </head>
 <body>
 	<!-- Header -->
